# llm-preference-unlearning

./: .gitignore  Makefile  README.md  activation_based_unlearning.ipynb  activation_cluster.ipynb  activation_probe.ipynb  analysis_gradients.ipynb  drift_analysis.ipynb  prompt_set.csv  pyproject.toml  requirements.txt  setup.cfg
data/: baseline.jsonl  dataset_info.json  unlearn.jsonl  unlearn_generated.jsonl  unlearn_old.jsonl
docker/: Dockerfile  Makefile  README.md  docker-compose.yml
docs/: README.md  milestone_powerpoint.pptx
notebooks/: 00_recommender.ipynb  01_activation_probe.ipynb  02_activation_overlap.ipynb  03_saliency_maps.ipynb  04_gradient_analysis.ipynb  05_fisher_information.ipynb  06_drift_analysis.ipynb  07_activation_unlearning.ipynb  08_activation_guided_masked_lora_unlearning.ipynb  sensitive_neurons.json
notebooks/cluster/: drift_overlap_correlation.ipynb
scripts/: evaluate_unlearning.py  generate_unlearn_jsonl.py  generate_unlearning_prompts.py
src/activation_unlearning/: __init__.py  recommender.py
src/activation_unlearning/cli/: extract.py
src/activation_unlearning/data/: dataset_info.json
src/activation_unlearning/models/: recommender.py
src/activation_unlearning/probing/: extract.py
src/activation_unlearning/training/: dataset.py  qwen_unlearn.yaml
tests/: test_dataset_load.py  test_extract_activation.py
