[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "activation-unlearning"
version = "0.1.0"
description = "Activation-level preference unlearning framework for LLM-based recommendation systems."
requires-python = ">=3.9"

readme = "README.md"

authors = [
    {name = "Jacob Ramey", email = "rameyjm7@gmail.com"}
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.1",
    "scipy>=1.10",
    "datasets>=2.18",
    "tqdm>=4.64",
    "llama-factory",           
    "seaborn>=0.12",           
    "matplotlib>=3.7",
]

[project.scripts]
activation-unlearning = "activation_unlearning.cli:main"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
]

notebooks = [
    "ipykernel",
    "notebook",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

training = [
    "accelerate>=0.30",
    "bitsandbytes>=0.42.0",
    "peft>=0.7.0",
    "trl>=0.7.10",
    "datasets>=2.18",
    "llama-factory",            
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
