[metadata]
name = activation-unlearning
version = 0.1.0
description = Activation-level preference unlearning framework for LLM recommender systems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Jacob M. Ramey
author_email = rameyjm7@gmail.com
url = https://github.com/rameyjm7/llm-preference-unlearning

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True

install_requires =
    torch>=2.1.0
    transformers>=4.40.0
    numpy>=1.23
    scipy>=1.10
    pandas>=2.0
    tqdm>=4.64
    matplotlib>=3.7
    seaborn>=0.12
    scikit-learn>=1.1
    ipykernel
    notebook
    datasets>=2.18

[options.packages.find]
where = src
include = activation_unlearning*

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    ruff
    isort

[tool:pytest]
addopts = -ra --disable-warnings --strict-markers
